Fix z-index for overlay settings menu

--- a/quadcopter/css/joystick.css
+++ b/quadcopter/css/joystick.css
@@ -105,6 +105,7 @@ background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65
     height: 300px;
     margin: 0;
     top: 30px;
+    z-index: 1000;
 }
 
 #settings-inner-container {
